--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,5 +11,10 @@
   <a mat-tab-link routerLink="/tab2" (click)="onTabClick('tab2')" [active]="activeTab == 'tab2'"> Tab 2 </a>
 </nav>
 
+<button mat-raised-button color="accent">Primary</button>
+<br>
+
 <router-outlet></router-outlet>
+<br><br>
 <a routerLink="/home">Home</a>
+
