--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,7 +11,7 @@ table {
     width: 25%;
   }
 
-  ::ng-deep .mat-sort-header-container:not(.mat-sort-header-sorted) .mat-sort-header-arrow {
+  .mat-sort-header-container:not(.mat-sort-header-sorted) .mat-sort-header-arrow {
     opacity: 0.54 !important;
     transform: translateY(0px) !important;
   }
